# gaussian-studio

./: .gitignore  README.md  config.jsonc.example  package-lock.json  package.json  pyproject.toml  start_api.py
app/: config.py  database.py  logger.py  task_queue.py  utils.py  workers.py
app/api/: __init__.py  routes.py
app/pipeline/: __init__.py  colmap_sfm.py  compress.py  frame_extraction.py  lichtfeld_recon.py
pipeline/: __init__.py  colmap-sfm.py  compress.py  frame-extraction.py  lichtfeld_recon.py
