[project]
name = "gaussian-studio"
version = "0.1.0"
description = "Tools for frame extraction, sfm and gaussian splatting reconstruction"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Yang Mingjia", email = "yangmingjia@bupt.edu.cn"}
]
keywords = ["gaussian-splatting", "3d-reconstruction", "sfm", "colmap"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "opencv-python>=4.5.0",
    "tqdm>=4.60.0",
]
