[project]
name = "gaussian-studio"
version = "0.1.0"
description = "Tools for frame extraction, sfm and gaussian splatting reconstruction"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Yang Mingjia", email = "yangmingjia@bupt.edu.cn"}
]
keywords = ["gaussian-splatting", "3d-reconstruction", "sfm", "colmap"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiosqlite>=0.22.1",
    "colorama>=0.4.6",
    "fastapi>=0.135.1",
    "numpy>=2.2.6",
    "opencv-python>=4.5.0",
    "python-multipart>=0.0.22",
    "tqdm>=4.60.0",
    "uvicorn>=0.41.0",
]
